--- a/app/src/main/res/layout/earthquake_list_item.xml
+++ b/app/src/main/res/layout/earthquake_list_item.xml
@@ -3,23 +3,34 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp"
+    android:padding="16dp"
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/magnitude_text"
-        android:layout_width="100dp"
-        android:layout_height="match_parent"
-        tools:text="15.2"/>
-    <TextView
-        android:id="@+id/place_text"
+        android:id="@+id/magnitude"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
-        tools:text="San Pablo, California"/>
+        tools:text="8.9" />
+
     <TextView
-        android:id="@+id/date_text"
-        android:layout_width="100dp"
-        android:layout_height="match_parent"
-        tools:text="Jan 27, 2017"/>
+        android:id="@+id/location"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        tools:text="San Francisco, CA" />
+
+    <TextView
+        android:id="@+id/date"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        tools:text="Mar 6, 2010" />
+
+    <TextView
+        android:id="@+id/time"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        tools:text="3:00 PM" />
 </LinearLayout>
